fix an issue where unicode emojis were too big

--- a/emojione.css
+++ b/emojione.css
@@ -1,4 +1,4 @@
-img.emojione {  
+.emojione {  
   display: inline-block;
   line-height: normal;
   font-size: inherit;
@@ -8,3 +8,7 @@ img.emojione {
   height: 1.1em;
   top: -0.1em;
 }
+
+img.emojione {
+  width: auto;
+} 
